--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
     <main>
         <h2>Explore My Portfolio</h2>
         <ul>
-            <li><a href="portfolio_website/home/home.html">Home</a></li>
-            <li><a href="portfolio_website/About me/about.html">About Me</a></li>
-            <li><a href="portfolio_website/contact/contact.html">Contact</a></li>
-            <li><a href="portfolio_website/credentials/Credentials.html">Credentials</a></li>
-            <li><a href="portfolio_website/past projects/past.html">Past Projects</a></li>
-            <li><a href="portfolio_website/recent projects/recent.html">Recent Projects</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="Credentials.html">Credentials</a></li>
+            <li><a href="past.html">Past Projects</a></li>
+            <li><a href="recent.html">Recent Projects</a></li>
         </ul>
     </main>
 </body>
